--- a/src/components/review.css
+++ b/src/components/review.css
@@ -22,7 +22,7 @@ h4 {
 hr {
   margin: 20px 0;
 }
-span.required {
+span .required {
   color: red;
 }
 .main-block {
@@ -59,7 +59,7 @@ textarea:hover {
   margin: 30px 0;
 }
 .comments,
-question,
+.question,
 .answer,
 .question-answer,
 table {
