--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  background-color: black;
 }
 
 @media (prefers-reduced-motion: no-preference) {
@@ -14,12 +15,17 @@
   display: block;
   margin-left: auto;
   margin-right: auto;
+  padding: 2rem;
 }
 
 .review-from {
   margin: 0.5rem;
 }
-
+.blackstripe {
+  border-width: auto;
+  border: 1rem;
+  background-color: black;
+}
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
