--- a/src/components/review.css
+++ b/src/components/review.css
@@ -67,6 +67,7 @@ table {
 }
 .comments {
   margin: 0;
+  padding: 1rem;
 }
 small {
   display: block;
@@ -75,6 +76,7 @@ small {
 }
 textarea {
   width: calc(100% - 6px);
+  margin-top: 1rem;
 }
 .question-answer > div {
   display: inline-block;
