--- a/src/components/review.css
+++ b/src/components/review.css
@@ -9,9 +9,9 @@ p {
   margin: 0;
   outline: none;
   font-family: Roboto, Arial, sans-serif;
-  font-size: 0.7rem;
+  font-size: 0.9rem;
   color: #666;
-  line-height: 22px;
+  line-height: 1.25rem;
 }
 h1 {
   font-weight: 400;
@@ -43,7 +43,7 @@ td {
   width: 12%;
   text-align: center;
   vertical-align: unset;
-  line-height: 18px;
+  line-height: 1.25rem;
   font-weight: 400;
   word-break: break-all;
 }
@@ -66,10 +66,12 @@ textarea:hover {
 .question-answer,
 table {
   width: 100%;
+  line-height: 1.5rem;
 }
 .comments {
   margin: 0;
   padding: 1rem;
+  font-size: 0.9rem;
 }
 small {
   display: block;
@@ -107,7 +109,7 @@ button:hover {
   margin-left: 0.5rem;
 }
 .form-row {
-  font-size: 0.8rem;
+  font-size: 1rem;
   width: 10rem;
   border: 1px solid #999;
   border-radius: 0.2rem;
@@ -127,7 +129,7 @@ select {
   margin-right: auto;
 }
 #instructor {
-  margin-left: 1.9rem;
+  margin-left: 2.3rem;
 }
 .review-logo {
   height: 9.5rem;
@@ -140,6 +142,7 @@ select {
 
 .formheader {
   text-align: center;
+  line-height: 1rem;
 }
 @media (min-width: 30rem) {
   .comments-block,
